# manhwa

./: .env.example  .gitignore  CLAUDE.md  README.md  SESSION_2026-04-05.md  pyproject.toml
extension/: background.js  content.css  content.js  manifest.json
extension/popup/: popup.html  popup.js
toon/: ai_client.py  api.py  cli.py  config.py  db.py  models.py  webui.py
toon/extractor/: prompts.py  vision.py
toon/learner/: prompts.py  style_learner.py
toon/profiler/: builder.py  prompts.py
toon/scraper/: downloader.py
toon/translator/: engine.py  prompts.py
